Add fixes for MYSQL fields requiring meta lookup